--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,11 +5,11 @@
     position: fixed;
     top: 15px;
     z-index: 1000;
-    font-size: 10px;
-    gap: 17px;
+    font-size: clamp(3px, 1.25vw, 10px);
+    gap: clamp(5px, 1vw, 17px);
     color: #D4F0FA;
     backdrop-filter: blur(4px);
-    padding: 0px 15px; /* Ajoute du padding pour rendre le conteneur plus esthétique */
+    padding: 0px clamp(12px, 2vw, 16px); /* Ajoute du padding pour rendre le conteneur plus esthétique */
     left: 50%; /* Place la navbar au milieu horizontalement */
     transform: translateX(-50%); /* Centre la navbar en utilisant une transformation */
     background-color: #03062C88;
